tests/error/template_n_mismatch.gw
#! [contains] arguments do not match for template call
fun void test<~A](){ <<< "func" >>>;}
fun void test<~A](int i){<<< "other func" >>>;}

test<~int, float, int]();
#!test<~int]();
